project1/deploy-svc-bar.yml
---
kind: Service
apiVersion: v1
metadata:
  name: bar-svc
spec:
  selector:
    app: bar-app
  ports:
  - port: 8080 #그림상 8080 내부서비스 포트로나옴
    targetPort: 8080

---
kind: Deployment 
apiVersion: apps/v1 
metadata:
  name: bar-deploy
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: bar-app
  template: #레플리카부족시 파드 템플릿 보고 띄움
    metadata:
      name: bar-pod
      labels: 
        app: bar-app
    spec: 
      containers:
      - name: bar-container
        image: whatwant/node-web:2.0 
        ports: 
        - containerPort: 8080
