project1/ingress-foo-bar.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
spec:
  ingressClassName: nginx   # 확인: kubectl get ingressclass
  #이걸 가지고있는 인그레스 컨트롤러의미
  # 인그레스 컨트롤러가 생성시 만듬.
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix #기본값임.
        backend:
          service:
            name: foo-svc
            port:
              number: 4200 #서비스로 요청하는 포트
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: bar-svc
            port:
              number: 8080 #서비스로 요청하는 포트
